fix: empty first page on firefox

--- a/src/components/annual-report/ReportData.module.css
+++ b/src/components/annual-report/ReportData.module.css
@@ -27,7 +27,7 @@
 
 @media print {
     /* add page breaks (before each "domain" section) */
-    .pageBreakBefore {
+    .pageBreakBefore:not(:first-child) {
         break-before: page;
     }
 }
